[package]
authors = ["hexilee <i@hexilee.me>"]
edition = "2018"
name = "tifs"
version = "0.3.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = {version = "1.12", features = ["macros", "rt", "time", "fs"]}
async-trait = "0.1"
bytes = "1.0"
bytestring = "1.0"
clap = "2.32"
fuser = {git = "https://github.com/cberner/fuser.git", features = ["serializable", "abi-7-31"]}
futures = "0.3"
libc = "0.2"
lru = "0.6"
parse-size = "1.0.0"
serde = {version = "1", features = ["derive"]}
slab = "0.4.2"
thiserror = "1.0"
tikv-client = {path = "../client-rust"}
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.16"
opentelemetry-jaeger = { version = "0.15", features = ["collector_client"] }
opentelemetry = { version = "0.16", default-features = false, features = ["trace"] }
blake3 = { version = "1.5", features = ["serde"] }
sha2 = "0.10.8"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1.8.0", features = ["serde"] }
num-format = "0.4"
num-traits = "0.2.19"
multimap = "0.10.0"
bimap = "0.6.3"
lazy_static="1.4"
strum = { version = "0.26.2", features = ["derive"] }
struct_iterable = "0.1.1"
tokio-console = "0.1.10"
console-subscriber = "0.2.0"
range-collections = "0.4.5"
num-bigint = "0.4.5"
tonic = "0.11"
derive_more = "0.99.18"
counter = "0.6.0"
flate2 = "1.0.30"

bincode = {version = "1.3.1", optional = true}
serde_json = {version = "1", optional = true}

paste = "1.0"

[features]
default = ["json"]

binc = ["bincode"]
json = ["serde_json"]


[dev-dependencies]


[workspace]
members = ["rust-grpc-example"]
